Add env config for integ test to only run with TD enabled
Some of our internal endpoints don't work with gRPC-LB (which is a fallback option for us)